--- a/.github/workflows/vercel-checks.yml
+++ b/.github/workflows/vercel-checks.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Run ESLint
         run: pnpm run lint
 
-      - name: notify vercel
+      - name: Notify Vercel
         if: always()
         uses: vercel/repository-dispatch/actions/status@v1
         with:
-          name: Vercel - mcas-erp: lint
+          status: success
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
